--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
-h2.intro{
+.intro h2{
   font-style: italic;
 }
 
-p.intro{
+.intro p{
   color: gray;
 }
 
-img.intro{
+.intro img{
   border: 5px;
   border-radius: 30%;
-  
+
 }
